--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Group 10</h1>
         </div>
         <div class="nav">
+<!--            akljjdshvjvnsdjv-->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
