Earliest Version of the Shop

--- a/shop.html
+++ b/shop.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hope For Yala</title>
-    <link rel="stylesheet" href="shop.css">
+    <title>Shop!</title>
+    <link rel="stylesheet" href="css/shop.css">
 </head>
 <body>
 <div id="slideContainer"></div>
 <div class="slideshow">
     <div class = "ss">
-        <img src="YalaElephant.jpg" class="ssImages" alt="Ele">
+        <img src="assets/YalaElephant.jpg" class="ssImages" alt="Ele">
     </div>
     <div class = "ss">
-        <img src="YalaJaguar2.jpg" class="ssImages" alt="Jag">
+        <img src="assets/YalaJaguar2.jpg" class="ssImages" alt="Jag">
     </div>
     <div class = "ss">
-        <img src="YalaDeer.jpg" class="ssImages" alt="Deer">
+        <img src="assets/YalaDeer.jpg" class="ssImages" alt="Deer">
     </div>
 </div>
-<script type="module" src="shop.js" ></script>
+<script type="module" src="script/shop.js" ></script>
 </body>
 </html>
