--- a/shop.html
+++ b/shop.html
@@ -2,22 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
     <title>Shop!</title>
     <link rel="stylesheet" href="css/shop.css">
 </head>
 <body>
-<div id="slideContainer"></div>
-<div class="slideshow">
-    <div class = "ss">
-        <img src="assets/YalaElephant.jpg" class="ssImages" alt="Ele">
-    </div>
-    <div class = "ss">
-        <img src="assets/YalaJaguar2.jpg" class="ssImages" alt="Jag">
-    </div>
-    <div class = "ss">
-        <img src="assets/YalaDeer.jpg" class="ssImages" alt="Deer">
-    </div>
+<div class="container">
+    <header>
+        <h1>Shopping Cart</h1>
+        <div class="shopping">
+            <img src="assets/shoppingBag.jpg">
+            <span class="quantity">0</span>
+        </div>
+    </header>
+    <div class="list"></div>
 </div>
+<div class="card">
+    <h1>Your Order</h1>
+    <ul class="listCard"></ul>
+    <div class="checkout">
+        <div class="total">0</div>
+            <div class="closeShopping">Close</div>
+        </div>
+    </div>
+<!-- Shop End-->
 <script type="module" src="script/shop.js" ></script>
 </body>
 </html>
