--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="js/featherlight.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 
 </head>
 <body>
@@ -41,9 +42,6 @@
         </div>
     </div>
 </section>
-
-
-
 
 
 <!--<section class="video-section">-->
@@ -99,18 +97,60 @@
 
 <section class="text-section">
 
-    <div class="wrapper">
+    <div class="wrapper"><a name="aboutus"></a>
         <div class="image align-left">
             <img src="images/light-bulb.png" alt="light bulb" class="align-left">
         </div>
         <div class="text align-left">
-            <h3>About Us</h3>
+            <h3>Our Mission</h3>
             <p class="subtitle">Our Commitment to a Sustainable Future</p>
             <p>At [Your Organization Name], we are dedicated to fostering a world where sustainability and coexistence
                 with nature are not just ideals, but a reality. Our journey began with a shared vision to contribute to
                 the United Nations Sustainable Development Goals (SDGs), focusing on [Specific Goal], which resonates
                 with our core values.</p>
-            <p>Fusce interdum suscipit ipsum, quis mattis metus posuere sit amet. Mauris rutrum imperdiet tortor.</p>
+            <p>Our mission is to engage communities, empower individuals, and enact change that leads to a more
+                sustainable, equitable, and healthier society. We believe in the power of collective action and the
+                impact it can have on achieving significant environmental and social outcomes.</p>
+        </div>
+        <div class="clear"></div>
+    </div>
+</section>
+
+
+<section class="text-section">
+
+    <div class="wrapper"><a name="aboutus"></a>
+
+        <div class="text align-left">
+            <h3>Our Team</h3>
+            <p class="subtitle">Our Misson eka supiri</p>
+            <p>Our mission is to engage communities, empower individuals, and enact change that leads to a more
+                sustainable, equitable, and healthier society. We believe in the power of collective action and the
+                impact it can have on achieving significant environmental and social outcomes.</p>
+            <p>ammatasiri wenwa</p>
+        </div>
+        <div class="image align-left">
+            <img src="images/light-bulb.png" alt="light bulb" class="align-left">
+        </div>
+        <div class="clear"></div>
+    </div>
+</section>
+
+<section class="text-section">
+
+    <div class="wrapper"><a name="aboutus"></a>
+        <div class="image align-left">
+            <img src="images/light-bulb.png" alt="light bulb" class="align-left">
+        </div>
+        <div class="text align-left">
+            <h3>Our Actions</h3>
+            <p class="subtitle">Our Commitment to a Sustainable Future</p>
+            <p>We take a hands-on approach to conservation, organizing beach clean-ups, running educational workshops,
+                and supporting local wildlife initiatives. Our efforts extend beyond the field, as we advocate for
+                policy changes and raise awareness about the importance of sustainable living.</p>
+            <p><h4 class="subtitle">Join Us</h4> We invite you to join us in this vital mission. Whether you’re looking to volunteer,
+            partner with us, or simply learn more about our work, your support is invaluable. Together, we can create a
+            legacy of sustainability for generations to come.</p>
         </div>
         <div class="clear"></div>
     </div>
@@ -230,6 +270,10 @@
         </ul>
     </div>
 </section>
+
+
+<!--TODO : Add a carousel for the services-->
+
 
 <section class="portfolio-section"><a name="gallery"></a>
     <h3>Portfolio</h3>
