Up untill add to Basket

--- a/shop.html
+++ b/shop.html
@@ -2,31 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
-    <title>Shop!</title>
+    <title>Shop</title>
     <link rel="stylesheet" href="css/shop.css">
 </head>
-<body>
+<body class="">
+
 <div class="container">
     <header>
-        <h1>Shopping Cart</h1>
+        <h1>Your Shopping Cart</h1>
         <div class="shopping">
-            <img src="assets/shoppingBag.jpg">
+            <img src="assets/shoppingBag.jpg" alt="shopping">
             <span class="quantity">0</span>
         </div>
     </header>
-    <div class="list"></div>
+
+    <div class="list">
+
+    </div>
 </div>
 <div class="card">
-    <h1>Your Order</h1>
-    <ul class="listCard"></ul>
-    <div class="checkout">
+    <h1>Card</h1>
+    <ul class="listCard">
+    </ul>
+    <div class="checkOut">
         <div class="total">0</div>
-            <div class="closeShopping">Close</div>
-        </div>
+        <div class="closeShopping">Close</div>
     </div>
-<!-- Shop End-->
-<script type="module" src="script/shop.js" ></script>
+</div>
+
+<script src="script/shop.js"></script>
 </body>
 </html>
