Up until checkout

--- a/shop.html
+++ b/shop.html
@@ -20,14 +20,16 @@
 
     </div>
 </div>
-<div class="card">
-    <h1>Card</h1>
+<div class="cart">
+    <h1>Shopping Cart</h1>
     <ul class="listCard">
     </ul>
-    <div class="checkOut">
-        <div class="total">0</div>
-        <div class="closeShopping">Close</div>
+    <div class="checkout">
+        <div class="total">Net Total:
+            0</div>
+        <div class="proceedCheckout">CheckOut</div>
     </div>
+    <div class="closeShopping">Close</div>
 </div>
 
 <script src="script/shop.js"></script>
