Up until checkout

--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,9 @@
     <div class="checkout">
         <div class="total">Net Total:
             0</div>
-        <div class="proceedCheckout">CheckOut</div>
+        <div class="proceedCheckout">
+            <a href="checkoutPage.html">CheckOut</a>
+        </div>
     </div>
     <div class="closeShopping">Close</div>
 </div>
