css styles added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-<!-- rohdvhvrhvkfvjdfjdvfvvfnonvf -->
+
 
 <!-- &lt;!&ndash;    INTRO START &ndash;&gt;-->
 <!--&lt;!&ndash;TODO : should make more style &ndash;&gt;-->
@@ -50,7 +50,6 @@
                 <li><a href="#volenteering">Volunteering</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a class="nav-cta" href="#">Sign In</a></li>
-                <li><a class="nav-cta" href="#">Sign Up</a></li>
             </ul>
         </nav>
     </div>
@@ -148,7 +147,7 @@
         <ul class="card-list">
             <li>
                 <div class="image-container">
-                    <img src="assets/icon-pencil.png" alt="card icon">
+                    <img src="./assets/icon/donate.gif" alt="Donate" style="width:48px;height:48px;">
                 </div>
                 <h5>Donate</h5>
                 <p>All donations fo into the welfare of the animals. Your donations are welcome, and highly regarded
@@ -158,7 +157,7 @@
             </li>
             <li>
                 <div class="image-container">
-                    <img src="assets/icon-camera.png" alt="card icon">
+                    <img src="./assets/icon/overpopulation.gif" alt="volnteer" style="width:48px;height:48px;">
                 </div>
                 <h5>Volunteer</h5>
                 <p>Whether you want to volunteer in our vet clinic or for beach cleanups. We at Gaia welcome
@@ -168,11 +167,12 @@
             </li>
             <li>
                 <div class="image-container">
-                    <img src="assets/icon-film.png" alt="card icon">
+                    <img src="./assets/icon/gift.gif" alt="gift" style="width:48px;height:48px;">
                 </div>
                 <h5>Gift Shop</h5>
                 <p>Our gift shop consist of a curated collection of merchandise. Original prints inspired from Yala
-                    animals. Our volunteers work. You can buy T-Shirts to Handmade Jewellery, and Art.<br> Everything you
+                    animals. Our volunteers work. You can buy T-Shirts to Handmade Jewellery, and Art.<br> Everything
+                    you
                     buy from here, goes into the volunteers fund.</p>
                 <a href="#">Continue to shop</a> <!-- TODO: Link Nilasi's Shopping Page(p)-->
             </li>
@@ -348,17 +348,17 @@
                 </div>
             </a>
 
-                <a class="blurcard"
-                   href="http://pasan.ml/games/">
-                    <div class="blurcard__background"
-                         style="background-image: url(https://www.civitatis.com/f/sri-lanka/ella/safari-parque-yala-589x392.jpg)"></div>
-                    <div class="blurcard__content">
-                        <p class="blurcard__category">Upcoming</p>
-                        <h3 class="blurcard__heading">Yala</h3>
-                    </div>
-                </a>
+            <a class="blurcard"
+               href="http://pasan.ml/games/">
+                <div class="blurcard__background"
+                     style="background-image: url(https://www.civitatis.com/f/sri-lanka/ella/safari-parque-yala-589x392.jpg)"></div>
+                <div class="blurcard__content">
+                    <p class="blurcard__category">Upcoming</p>
+                    <h3 class="blurcard__heading">Yala</h3>
+                </div>
+            </a>
 
-    </div>
+        </div>
     </section>
 </section>
 
@@ -401,7 +401,7 @@
 <section class="email-list-section">
     <h3>Subscribe</h3>
     <p class="subtitle">Stay up to date with us</p>
-<!--    FIXME : change placeholder color -->
+    <!--    FIXME : change placeholder color -->
     <form action="newsletter.php" method="post">
         <input type="text" placeholder="Email Address" required>
         <button type="submit" title="Submit">Submit</button>
