css styles added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#volenteering">Volunteering</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a class="nav-cta" href="#">Sign In</a></li>
+<!--                <li><a class="nav-cta" href="#">Sign In</a></li>-->
             </ul>
         </nav>
     </div>
@@ -80,7 +80,6 @@
 
 
 <br>
-<center><h2>About Us</h2></center>
 <!--TODO: Write a css class to above text -->
 <!-- NOTE: I(N) have changed the order of some div classes. This is how the final layout should be-->
 
@@ -97,7 +96,6 @@
         <div class="clear"></div>
     </div>
 </section>
-
 
 <section class="text-section">
 
@@ -157,7 +155,7 @@
             </li>
             <li>
                 <div class="image-container">
-                    <img src="./assets/icon/overpopulation.gif" alt="volnteer" style="width:48px;height:48px;">
+                    <img src="./assets/icon/overpopulation.gif" alt="volunteer" style="width:48px;height:48px;">
                 </div>
                 <h5>Volunteer</h5>
                 <p>Whether you want to volunteer in our vet clinic or for beach cleanups. We at Gaia welcome
@@ -184,53 +182,53 @@
     </div>
 </section>
 
-<section class="features-section">
-    <div class="wrapper">
-        <ul class="feature-squares">
-            <li>
-                <div class="image">
-                    <img src="assets/icon-eye.png" alt="feature icon">
-                </div>
-                <div class="text">
-                    <h5>Attention to Detail</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue
-                        faucibus enim, vel molestie lectus.</p>
-                </div>
-            </li>
-            <li>
-                <div class="image">
-                    <img src="assets/icon-clock.png" alt="feature icon">
-                </div>
-                <div class="text">
-                    <h5>Save Time</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue
-                        faucibus enim, vel molestie lectus.</p>
-                </div>
-            </li>
-            <li>
-                <div class="image">
-                    <img src="assets/icon-dashboard.png" alt="feature icon">
-                </div>
-                <div class="text">
-                    <h5>Complete Control</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue
-                        faucibus enim, vel molestie lectus.</p>
-                </div>
-            </li>
-            <li>
-                <div class="image">
-                    <img src="assets/icon-headset.png" alt="feature icon">
-                </div>
-                <div class="text">
-                    <h5>24/7 Support</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue
-                        faucibus enim, vel molestie lectus.</p>
-                </div>
-            </li>
-            <div class="clear"></div>
-        </ul>
-    </div>
-</section>
+<!--<section class="features-section">-->
+<!--    <div class="wrapper">-->
+<!--        <ul class="feature-squares">-->
+<!--            <li>-->
+<!--                <div class="image">-->
+<!--                    <img src="assets/icon-eye.png" alt="feature icon">-->
+<!--                </div>-->
+<!--                <div class="text">-->
+<!--                    <h5>Attention to Detail</h5>-->
+<!--                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue-->
+<!--                        faucibus enim, vel molestie lectus.</p>-->
+<!--                </div>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <div class="image">-->
+<!--                    <img src="assets/icon-clock.png" alt="feature icon">-->
+<!--                </div>-->
+<!--                <div class="text">-->
+<!--                    <h5>Save Time</h5>-->
+<!--                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue-->
+<!--                        faucibus enim, vel molestie lectus.</p>-->
+<!--                </div>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <div class="image">-->
+<!--                    <img src="assets/icon-dashboard.png" alt="feature icon">-->
+<!--                </div>-->
+<!--                <div class="text">-->
+<!--                    <h5>Complete Control</h5>-->
+<!--                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue-->
+<!--                        faucibus enim, vel molestie lectus.</p>-->
+<!--                </div>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <div class="image">-->
+<!--                    <img src="assets/icon-headset.png" alt="feature icon">-->
+<!--                </div>-->
+<!--                <div class="text">-->
+<!--                    <h5>24/7 Support</h5>-->
+<!--                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut dignissim sapien. Mauris congue-->
+<!--                        faucibus enim, vel molestie lectus.</p>-->
+<!--                </div>-->
+<!--            </li>-->
+<!--            <div class="clear"></div>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</section>-->
 
 <!--Volentering section here -->
 
@@ -470,9 +468,9 @@
 
 <section class="text-section">
     <div class="text align-center">
-        <h3>Heard Enough?</h3>
-        <p class="subtitle">Let's get started</p>
-        <p><a href="#" class="button-1">Begin</a></p>
+        <h3>Lost?, Site map here</h3>
+<!--        <p class="subtitle">Let's get started</p>-->
+        <p><a href="#" class="button-1">Site Map</a></p>
     </div>
 </section>
 
