New Version Index Image all OK

--- a/index-old.html
+++ b/index-old.html
@@ -317,7 +317,7 @@
     <p class="subtitle">Our featured works</p>
 
 
-    <section class="hero-section">
+    <section class="blurcard-section">
 
         <div class="blurcard-grid">
             <a class="blurcard" href="http://mask.pasan.ml/">
