--- a/checkoutPage.html
+++ b/checkoutPage.html
@@ -1,65 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>checkout</title>
-    <link rel="stylesheet" href="css/checkoutPage.css" />
-  </head>
-  <body>
-    <h1>Checkout Page</h1>
-    <div class="container">
-      <div class="checkoutLayout">
-        <div class="returnCart">
-          <a href="/">Keep Shopping</a>
-          <h1>Products Added To Cart</h1>
-          <div class="list">
-            <div class="item">
-              <img src="assets/necklace.jpg" alt="product" />
-              <div class="info">
-                <div class="name">Product 1</div>
-                <div class="price">$22</div>
-              </div>
-              <div class="quantity">1</div>
-              <div class="returnPrice">$50</div>
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Checkout Page</title>
+  <link rel="stylesheet" href="css/checkoutPage.css">
+</head>
+<body>
+
+<div class="container">
+  <div class="checkoutLayout">
+    <div class="returnCart">
+      <a href="shop.html">keep shopping</a>
+
+      <div class="list">
+        <div class="item">
+
+
         </div>
+
       </div>
     </div>
 
+
     <div class="right">
       <h1>Checkout</h1>
+
       <div class="form">
+
         <fieldset>
           <legend>Personal Details</legend>
           <div class="group">
             <label for="fullname">Full Name: </label>
-            <input type="text" name="fullname" id="fullname" />
-            <br />
+            <input type="text" name="fullname" id="fullname">
+            <br>
           </div>
           <div class="group">
             <label for="contact">Contact Number: </label>
-            <input type="text" name="contact" id="contact" />
-            <br />
+            <input type="text" name="contact" id="contact">
+            <br>
           </div>
         </fieldset>
         <fieldset>
           <legend>Delivery Details</legend>
           <div class="group">
             <label for="Ad1">Address Line no 1: </label>
-            <input type="text" name="Ad1" id="Ad1" />
-            <br />
+            <input type="text" name="Ad1" id="Ad1">
+            <br>
           </div>
           <div class="group">
             <label for="Ad2">City: </label>
-            <input type="text" name="Ad2" id="Ad2" />
+            <input type="text" name="Ad2" id="Ad2">
           </div>
           <div class="group">
             <label for="postCode">PostCode: </label>
-            <input type="text" name="postCode" id="postCode" />
+            <input type="text" name="postCode" id="postCode">
           </div>
           <div class="group">
-            <label for="district">PostCode: </label>
+            <label for="district">District: </label>
             <select name="district" id="district">
               <option value="default">Colombo</option>
               <option value="1">Galle</option>
@@ -72,8 +70,41 @@
             </select>
           </div>
         </fieldset>
+        <fieldset>
+          <legend>Payment Option</legend>
+          <div class="group" id="radio">
+            <label for="payment1">VISA Card</label>
+            <input type="radio" id="payment1">
+            <label for="payment2">Master Card</label>
+            <input type="radio" id="payment2">
+            <label for="payment3">COD</label>
+            <input type="radio" id="payment3">
+          </div>
+
+        </fieldset>
+        <fieldset>
+          <legend>Order Details</legend>
+          <div class="return">
+            <div class="row">
+              <div>Total Quantity</div>
+              <div class="totalQuantity">6</div>
+            </div>
+            <div class="row">
+              <div>Total Price</div>
+              <div class="totalPrice">60</div>
+            </div>
+          </div>
+        </fieldset>
+        <button class="buttonCheckout">CHECKOUT</button>
       </div>
     </div>
-    <script src="script/checkoutPage.js"></script>
-  </body>
+  </div>
+
+</div>
+<script src="checkout.js"></script>
+
+</body>
 </html>
+
+
+
