New Version Index Image all OK

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/tmp.css">
+    <link rel="stylesheet" href="css/widgets/navigation.css">
     <link rel="stylesheet" href="css/blur-card.css">
 
 
@@ -26,7 +27,10 @@
 <!--            <label for="tab2" class="tab">About</label>-->
 <!--            </input>-->
 <!--            <input type="radio" name="tabs" id="tab3">-->
-<!--            <label for="tab3" class="tab">Service</label>-->
+<!--            <label for="tab3" class="tab">Project</label>-->
+<!--            </input>-->
+<!--            <input type="radio" name="tabs" id="tab4">-->
+<!--            <label for="tab4" class="tab">blog</label>-->
 <!--            </input>-->
 <!--            <span class="selector"></span>-->
 <!--        </div>-->
