--- a/Blog1.html
+++ b/Blog1.html
@@ -23,7 +23,7 @@
 
 <!--HOME HERE-->
 <section id="home" class="home">
-    <img src="assets/YalaElephant2.jpg">
+    <img src="assets/YalaElephant2.jpg" alt="blogpic">
     <h1 class="title">ORIGIN STORIES</h1>
 </section>
 
