Revert "content pages added"
This reverts commit 7dd679b6c9ecd92e16e28f09e5b08b371902b15f.

--- a/Blog1.html
+++ b/Blog1.html
@@ -23,7 +23,7 @@
 
 <!--HOME HERE-->
 <section id="home" class="home">
-    <img src="assets/YalaElephant2.jpg" alt="blogpic">
+    <img src="assets/YalaElephant2.jpg">
     <h1 class="title">ORIGIN STORIES</h1>
 </section>
 
