--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
     <link rel="stylesheet" href="./css/template.css" />
-    <!--    <link rel="stylesheet" href="./css/tmp.css">-->
+    <!--    <link rel="stylesheet" href="./css/style.css">-->
   </head>
 
   <body>
