--- a/index-old.html
+++ b/index-old.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GAIYA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/unused/style.css">
     <link rel="stylesheet" href="css/blur-card.css">
     <link rel="stylesheet" href="css/splash.css">
 
