--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>GIYA</title>
 
 <!--    <link rel="stylesheet" href="css/parallax.css" >-->
-    <link rel="stylesheet" href="css/tmp.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/widgets/navigation.css">
     <link rel="stylesheet" href="css/blur-card.css">
+    <link rel="stylesheet" href="css/splash.css">
+
+    <script src="js/splash.js"></script>
 
 
 </head>
@@ -18,23 +21,6 @@
 
 <header>
 
-<!--    <div class="menu">-->
-<!--        <div class="tabs">-->
-<!--            <input type="radio" name="tabs" id="tab1" checked>-->
-<!--            <label for="tab1" class="tab">Home</label>-->
-<!--            </input>-->
-<!--            <input type="radio" name="tabs" id="tab2">-->
-<!--            <label for="tab2" class="tab">About</label>-->
-<!--            </input>-->
-<!--            <input type="radio" name="tabs" id="tab3">-->
-<!--            <label for="tab3" class="tab">Project</label>-->
-<!--            </input>-->
-<!--            <input type="radio" name="tabs" id="tab4">-->
-<!--            <label for="tab4" class="tab">blog</label>-->
-<!--            </input>-->
-<!--            <span class="selector"></span>-->
-<!--        </div>-->
-<!--    </div>-->
     <h1>GIYA</h1>
     <nav>
         <a href="#home" class="active">Home</a>
@@ -44,18 +30,17 @@
     </nav>
 </header>
 
-
 <!--HOME HERE-->
 <section id="home" class="home">
-    <img src="assets/sky.png" class="mount2">
-    <img src="assets/back.png" class="mount1">
-    <img src="assets/bush2.png" class="bush2">
+    <img src="assets/parallax/sky.png" class="mount2">
+    <img src="assets/parallax/back.png" class="mount1">
+    <img src="assets/parallax/bush2.png" class="bush2">
 
     <h1 class="title">GIYA</h1>
 
-    <img src="assets/front.png" class="bush1">
-    <img class="leaf2" src="assets/bush1.png">
-    <img src="assets/bush.png" class="leaf1">
+    <img src="assets/parallax/front.png" class="bush1">
+    <img class="leaf2" src="assets/parallax/bush1.png">
+    <img src="assets/parallax/bush.png" class="leaf1">
 </section>
 
 
@@ -218,7 +203,7 @@
 
 <footer>
     <div class="wrapper">
-        <a class="logo" href="#">cknc<img src="assets/logo.png" alt="Logo"></a>
+        <a class="logo" href="#">cknc<img src="assets/icon/logo.png" alt="Logo"></a>
         <div class="footer-left">
             <p class="copyright">Giya Team</p>
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
