--- a/feedback.html
+++ b/feedback.html
@@ -8,14 +8,14 @@
     <title>Feedback Form</title>
 </head>
 
-<body>
-<header style="background-color: rgba(51,51,51,0.2);border-radius: 24px;">
+<body class="bo">
+<header style="background-color: rgba(51,51,51,0.12);border-radius: 24px;">
     <h1>GIYA</h1>
     <nav>
-        <a href="home.html">Home</a>
-        <a href="home.html">About</a>
-        <a href="home.html">Projects</a>
-        <a href="home.html">Blog</a>
+        <a href="home.html" style="color: black;">Home</a>
+        <a href="home.html" style="color: black;">About</a>
+        <a href="home.html" style="color: black;">Projects</a>
+        <a href="home.html" style="color: black;">Blog</a>
     </nav>
 </header>
 
