--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="wrapper">
         <a class="logo" href="#">cknc<img src="assets/icon/logo.png" alt="Logo"></a>
         <div class="footer-left">
-            <p class="copyright">Giya Team</p>
+            <p class="copyright">Gaia Team</p>
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
             </p>
         </div>
