Splash PAge Done. Shop is Completed

--- a/checkoutPage.html
+++ b/checkoutPage.html
@@ -44,13 +44,9 @@
         <fieldset>
           <legend>Delivery Details</legend>
           <div class="group">
-            <label for="Ad1">Address Line no 1: </label>
+            <label for="Ad1">Address: </label>
             <input type="text" name="Ad1" id="Ad1">
             <br>
-          </div>
-          <div class="group">
-            <label for="Ad2">City: </label>
-            <input type="text" name="Ad2" id="Ad2">
           </div>
           <div class="group">
             <label for="postCode">PostCode: </label>
