--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project GAIA</title>
+    <title>GIYA</title>
 
 <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/style.css">
@@ -21,20 +21,6 @@
 
 <header>
 
-<!--    <div class="menu">-->
-<!--        <div class="tabs">-->
-<!--            <input type="radio" name="tabs" id="tab1" checked>-->
-<!--            <label for="tab1" class="tab">Home</label>-->
-<!--            </input>-->
-<!--            <input type="radio" name="tabs" id="tab2">-->
-<!--            <label for="tab2" class="tab">About</label>-->
-<!--            </input>-->
-<!--            <input type="radio" name="tabs" id="tab3">-->
-<!--            <label for="tab3" class="tab">Service</label>-->
-<!--            </input>-->
-<!--            <span class="selector"></span>-->
-<!--        </div>-->
-<!--    </div>-->
     <h1>GIYA</h1>
     <nav>
         <a href="#home" class="active">Home</a>
@@ -51,7 +37,7 @@
     <img src="assets/parallax/back.png" class="mount1">
     <img src="assets/parallax/bush2.png" class="bush2">
 
-    <h1 class="title">GAIA</h1>
+    <h1 class="title">GIYA</h1>
 
     <img src="assets/parallax/front.png" class="bush1">
     <img class="leaf2" src="assets/parallax/bush1.png">
