Corrected typos and updated gallery, feedback, index, team

--- a/index-old.html
+++ b/index-old.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GAIYA</title>
+    <title>GAIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/unused/style.css">
     <link rel="stylesheet" href="css/blur-card.css">
@@ -40,7 +40,7 @@
 
 <header id="top">
     <div class="wrapper">
-        <h1 class="logo"><a href="#">GIYA</a></h1>
+        <h1 class="logo"><a href="#">GAIA</a></h1>
         <!-- TODO: This Navigation Bar should turn to black(P) -->
         <nav>
             <ul id="navigation">
@@ -57,7 +57,7 @@
 
 <section id="banner"><a name="home"></a>
     <div class="wrapper">
-        <h2>GIYA</h2>
+        <h2>GAIA</h2>
         <p class="subtitle">Growing Inspiration, Yielding Action</p>
         <div class="buttons">
             <a href="#" class="button-1">Try Now</a>
