--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIYA</title>
+    <title>Project GAIA</title>
 
 <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/style.css">
@@ -21,7 +21,7 @@
 
 <header>
 
-    <h1>GIYA</h1>
+    <h1>GAIA</h1>
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -37,7 +37,7 @@
     <img src="assets/parallax/back.png" class="mount1">
     <img src="assets/parallax/bush2.png" class="bush2">
 
-    <h1 class="title">GIYA</h1>
+    <h1 class="title">GAIA</h1>
 
     <img src="assets/parallax/front.png" class="bush1">
     <img class="leaf2" src="assets/parallax/bush1.png">
@@ -46,32 +46,38 @@
 
 
 <section class="about">
-    <h1>Parallax</h1>
+    <h1>Overview</h1>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis rem aliquid unde praesentium harum
-        consequuntur consequatur exercitationem quas officiis quod quidem amet, illum facere ipsam vitae quae, a aut non
-        numquam minus voluptate doloremque. Fugiat dolor dolores, temporibus, culpa quia illo, enim sint harum adipisci
-        voluptatem aliquid. Officia tempore dolore natus iure, odit blanditiis? Voluptate aliquid vel suscipit fugiat
-        dolor distinctio, blanditiis cupiditate rerum quidem repellat sint vero error minima? Culpa, porro ipsa totam
-        consequuntur molestiae nulla dignissimos voluptatum provident, minima eligendi sapiente tempore quas asperiores,
-        reiciendis veritatis placeat? Odit nobis rem a iste reiciendis nemo tempore quae asperiores quia.</p>
+    <p>
+        Project GAIA, spearheaded by WILD TRAILS - Hotel & Spa, stands 
+        as a beacon of wildlife conservation adjacent to the captivating 
+        Yala National Park in Sri Lanka. Rooted in the principles of 
+        sustainability, our initiative is a multifaceted endeavor that 
+        addresses the pressing challenges facing the region's diverse 
+        fauna and ecosystems.
+    </p>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, aliquam illum. Totam inventore beatae,
-        facilis harum adipisci molestias blanditiis voluptatibus consequatur, explicabo, voluptates consectetur eaque
-        nihil perferendis ratione architecto. Unde odio modi dolor, suscipit nostrum quibusdam quia minima, facilis
-        distinctio aliquid excepturi. Repellendus consequuntur numquam, minus tenetur commodi ipsum velit aspernatur
-        nostrum suscipit explicabo possimus molestiae minima doloribus. Doloribus architecto voluptates perferendis
-        nostrum ullam hic odio sunt. Dolores facilis, pariatur eligendi excepturi accusamus optio aliquam maxime
-        aspernatur, explicabo velit cum, quia a cumque voluptas quis nesciunt. Repellendus hic consequuntur aperiam
-        delectus ratione reprehenderit expedita adipisci ut nesciunt amet, exercitationem illo.</p>
+    <p>
+        Central to Project GAIA is our state-of-the-art Wildlife Vet 
+        Clinic, where our dedicated team provides essential medical care 
+        and rehabilitation services for the park's wildlife. Beyond 
+        medical interventions, we are passionate about fostering 
+        harmonious coexistence between humans and wildlife through 
+        educational programs and awareness campaigns. These initiatives 
+        target school children and youth, aiming to instill a deeper 
+        understanding and appreciation for nature and conservation.
+    </p>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt saepe dolorem consectetur architecto officiis.
-        Unde, at. Magnam sed aliquid nesciunt error sint repudiandae ad. Reiciendis minus, esse eos soluta mollitia quia
-        est! Inventore aliquid ut hic fuga ratione consectetur ea? Ratione tempore, ab dolor, assumenda neque doloremque
-        voluptate nesciunt eaque, illo ipsa quia. Nihil dolor libero animi quibusdam recusandae et cumque deleniti
-        minima unde iste sint possimus numquam nam, corporis cupiditate? Maxime voluptate atque alias consequuntur
-        tenetur non quia amet, eligendi libero odio adipisci aperiam dolore perferendis illum vero, nam temporibus
-        numquam cumque, neque fuga iste? Totam cum modi excepturi!</p>
+    <p>
+        In addition to our conservation efforts, Project GAIA actively 
+        engages the community through volunteer opportunities, including 
+        forest and beach cleanup initiatives. These programs not only 
+        contribute to the preservation of the park's natural beauty but 
+        also offer enriching experiences for participants, from hands-on 
+        involvement in conservation projects to immersive wildlife 
+        tours. Explore our website to learn more about how you can join 
+        us in making a positive impact through Project GAIA.
+    </p>
 </section>
 
 <!--ABOUT US HERE-->
