--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIYA</title>
+    <title>GAIA Team</title>
 
     <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/student_3.css">
@@ -22,7 +22,7 @@
 
 <header>
 
-    <h1>GIYA</h1>
+    <h1>GAIA</h1>
     <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -37,7 +37,7 @@
     <img src="assets/parallax/back.png" class="mount1">
     <img src="assets/parallax/bush2.png" class="bush2">
 
-    <h1 class="title">GIYA</h1>
+    <h1 class="title">GAIA</h1>
 
     <img src="assets/parallax/front.png" class="bush1">
     <img class="leaf2" src="assets/parallax/bush1.png">
