--- a/feedback.html
+++ b/feedback.html
@@ -10,12 +10,13 @@
 
 <body class="bo">
 <header style="background-color: rgba(51,51,51,0.12);border-radius: 24px;">
-    <h1>GIYA</h1>
+    <h1>GAIA</h1>
     <nav>
-        <a href="home.html" style="color: black;">Home</a>
-        <a href="home.html" style="color: black;">About</a>
-        <a href="home.html" style="color: black;">Projects</a>
-        <a href="home.html" style="color: black;">Blog</a>
+        <a href="index.html" style="color: black;">Home</a>
+        <a href="index.html" style="color: black;">About</a>
+        <a href="index.html" style="color: black;">Projects</a>
+        <a href="index.html" style="color: black;">Blog</a>
+        <a href="gallery.html" style="color: black;">Gallery</a>
     </nav>
 </header>
 
