added changes to the shop designing the splashScreen.html more

--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shop</title>
+
     <link rel="stylesheet" href="css/shop.css" />
+
   </head>
   <body class="">
     <div class="container">
@@ -25,9 +27,9 @@
 
       <div class="checkout">
         <div class="total">Net Total: 0</div>
-        <div class="proceedCheckout">
-          <a href="checkoutPage.html">CheckOut</a>
-        </div>
+        <button class="proceedCheckout" id="checkout"  >
+          CheckOut
+        </button>
       </div>
       <div class="closeShopping">Close</div>
     </div>
