--- a/splashScreen.html
+++ b/splashScreen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Life On Land</title>
-    <link rel="stylesheet" href="css/splash1.css">
+    <link rel="stylesheet" href="css/splash.css">
 </head>
 <body>
 <header>
