Added gallery title

--- a/gallery.html
+++ b/gallery.html
@@ -75,6 +75,8 @@
 
     <section id="gallery" class="card-section">
 
+        <h3 class="section-title">Gallery</h3>
+
         <section class="blurcard-section">
     
             <div class="blurcard-grid">
