added changes to the shop designing the splashScreen.html more

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIYA</title>
 
-<!--    <link rel="stylesheet" href="css/parallax.css" >-->
+   <link rel="stylesheet" href="css/parallax.css" >
     <link rel="stylesheet" href="css/tmp.css">
     <link rel="stylesheet" href="css/blur-card.css">
 
