--- a/shop.html
+++ b/shop.html
@@ -6,11 +6,13 @@
 
     <link rel="stylesheet" href="css/shop.css" />
 
+
   </head>
   <body class="">
+
     <div class="container">
       <header>
-        <h1>Your Shopping Cart</h1>
+        <h1>Shop Our Merch <3</h1>
         <div class="shopping">
           <img src="assets/shoppingBag.jpg" alt="shopping" />
           <span class="quantity">0</span>
