--- a/splashGIF.html
+++ b/splashGIF.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <link rel="stylesheet" href="css/splashGIF.css">
 
-    <meta http-equiv="refresh" content="6;url=index.html" />
+<!--    <meta http-equiv="refresh" content="6;url=index.html" />-->
 
 </head>
 
