--- a/blog1.html
+++ b/blog1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/tmp.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blur-card.css">
     <link rel="stylesheet" href="css/parallax.css">
     <link rel="stylesheet" href="css/blog.css">
@@ -23,7 +23,7 @@
 
 <!--HOME HERE-->
 <section id="home" class="home">
-    <img src="assets/YalaElephant2.jpg" alt="blogpic">
+    <img src="assets/previous/YalaElephant.jpg" alt="blogpic">
     <h1 class="title">ORIGIN STORIES</h1>
 </section>
 
