--- a/splashScreen.html
+++ b/splashScreen.html
@@ -2,30 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Life On Land</title>
+    <title>Splash</title>
+    <!--TODO: splash screen setup Nilasi-->
     <link rel="stylesheet" href="css/splash.css">
+    <script src="js/splash.js"></script>
 </head>
 <body>
-<header>
-    <div class="project">
-        <h1>PROJECT GAIA`</h1>
-    </div>
-</header>
-<div class="mission">
-    <h3>Empowering & Connecting Youth,<br>Serving Wildlife</h3>
+
+<div class='intro'>
+
+    <h1 class='logo-header'>
+        <picture>
+            <source srcset="assets/preload.webm" type="image/webp">  </picture>
+        <span class='logo'>Growing Inspiration</span>
+        <span class="logo">, </span>
+        <span class='logo'>Yielding Action</span>
+    </h1>
 </div>
-<section class="team">
-    <span class="members"></span>
-    <span class="members"></span>
-    <span class="members"></span>
-    <span class="members"></span>
-</section>
-<section class="names">
-    <span class="MNames">Nilasi</span>
-    <span class="MNames">Dasun</span>
-    <span class="MNames">Pasan</span>
-    <span class="MNames">Mahima</span>
-</section>
-<script src="js/splash.js"></script>
+
 </body>
 </html>
