--- a/splashScreen.html
+++ b/splashScreen.html
@@ -6,19 +6,19 @@
     <!--TODO: splash screen setup Nilasi-->
     <link rel="stylesheet" href="css/splash.css">
     <script src="js/splash.js"></script>
+    <meta http-equiv="refresh" content="2.5;url=splashGIF.html" />
 </head>
 <body>
 
 <div class='intro'>
-
     <h1 class='logo-header'>
-        <picture>
-            <source srcset="assets/preload.webm" type="image/webp">  </picture>
-        <span class='logo'>Growing Inspiration</span>
-        <span class="logo">, </span>
-        <span class='logo'>Yielding Action</span>
+
+        <span class='logo'>Empowering & Connecting Youth,<br>Serving Wildlife</span>
     </h1>
+
+
 </div>
+
 
 </body>
 </html>
