--- a/blog4.html
+++ b/blog4.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/tmp.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blur-card.css">
-    <link rel="stylesheet" href="css/parallax.css">
+    <link rel="stylesheet" href="css/header_&_footer.css">
     <link rel="stylesheet" href="css/blog.css">
     <title>Blog/Beach-Cleanup Project</title>
 </head>
 <body>
 <header>
 
-    <h1>GAIA</h1>
+    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
     <nav>
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Projects</a>
-        <a href="#blog">Blog</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#project">Projects</a>
+        <a href="index.html#blog">Blog</a>
     </nav>
 </header>
 
@@ -98,7 +98,7 @@
                 <p>Whether you want to volunteer in our vet clinic or for beach cleanups. We at Gaia welcome
                     all volunteers. We have volunteers working with us throughout the Year, and they are the foundation
                     of our project.<br> It's nit just volunteering, we have fun too!</p>
-                <a href="blog2.html">Read Her Experience</a>
+                <a href="blog2.html">Read His Experience</a>
             </li>
             <li>
                 <div class="image-container">
@@ -119,7 +119,25 @@
         <a href="" class="button-1">Read More</a>
     </div>
 </section>
+<footer>
+    <div class="wrapper_footer">
 
+        <div class="footer-left">
+            <img src="assets/icon/ftguyfiu.jpg">
+            <img src="assets/icon/projectlogo.jpg">
+
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a></p>
+
+            <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
+            </p>
+        </div>
+        <div class="footer-right">
+            <a href="#" class="social facebook">Facebook</a>
+            <a href="#" class="social twitter">Facebook</a>
+            <a href="#" class="social google">Facebook</a>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
