--- a/team.html
+++ b/team.html
@@ -3,31 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIYA</title>
+    <title>Register as a Volunteer</title>
 
     <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/student_3.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/widgets/navigation.css">
-    <link rel="stylesheet" href="css/blur-card.css">
-    <link rel="stylesheet" href="css/splash.css">
+    <link rel="stylesheet" href="css/header_&_footer.css">
 
-    <script src="js/splash.js"></script>
-
+    <style>
+        body{
+            background-color: #1c3b2b;
+        }
+        h1{
+            font-family: 'Montserrat', sans-serif;
+            text-transform: uppercase;
+            font-weight: 700;
+            color: #1d4408;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 
 </head>
 <body>
 
-
-
 <header>
 
-    <h1>GIYA</h1>
+    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
     <nav>
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Projects</a>
-        <a href="#blog">Blog</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#project">Projects</a>
+        <a href="index.html#blog">Blog</a>
     </nav>
 </header>
 
@@ -35,16 +42,12 @@
 <section id="home" class="home">
     <img src="assets/parallax/sky.png" class="mount2">
     <img src="assets/parallax/back.png" class="mount1">
-    <img src="assets/parallax/bush2.png" class="bush2">
-
-    <h1 class="title">GIYA</h1>
-
+    <h1 class="title">GAIA</h1>
     <img src="assets/parallax/front.png" class="bush1">
-    <img class="leaf2" src="assets/parallax/bush1.png">
-    <img src="assets/parallax/bush.png" class="leaf1">
+
 </section>
 <br><br>
-<section class="team-cards">
+<section class="team-cards" id="team">
     <div class="team-member">
         <div class="thumbnail">
             <img class="team-member-image" src="../images/20180125_001_1_.jpg" alt="John Doe">
@@ -80,5 +83,25 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="wrapper_footer">
+
+        <div class="footer-left">
+            <img src="assets/icon/ftguyfiu.jpg">
+            <img src="assets/icon/projectlogo.jpg">
+
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a></p>
+
+            <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
+            </p>
+        </div>
+        <div class="footer-right">
+            <a href="#" class="social facebook">Facebook</a>
+            <a href="#" class="social twitter">Facebook</a>
+            <a href="#" class="social google">Facebook</a>
+        </div>
+        <div class="clear"></div>
+    </div>
+</footer>
 <script src="js/parallax.js"></script>
 </body>
