--- a/volunteer.html
+++ b/volunteer.html
@@ -3,18 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIYA</title>
+    <title>Registration</title>
 
     <!--    <link rel="stylesheet" href="css/parallax.css" >-->
     <link rel="stylesheet" href="css/student_3.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/widgets/navigation.css">
-    <link rel="stylesheet" href="css/blur-card.css">
-    <link rel="stylesheet" href="css/splash.css">
+    <link rel="stylesheet" href="css/header_&_footer.css">
+    <style>
+        body{
+        background-color: #1c3b2b;
+}
+        h1{
+        font-family: 'Montserrat', sans-serif;
+        text-transform: uppercase;
+        font-weight: 700;
+        color: #1d4408;
+        margin: 0;
+        padding: 0;
+        }
+        .title{
+            width: 250px;
+            height: 120px;
 
-    <script src="js/splash.js"></script>
+        }
+        .title a{
+            display: inline-block;
+            text-align: center;
+            font-size: 30px;
+            padding-bottom: 100px;
+            color: #ffffff;
+        }
+        .home .title {
+            position: absolute;
+            top: 45%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: var(--text-colorW);
+            font-size: 80px;
+            text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+        }
+        input[type=text], input[type=number], input[type=date], select, textarea {
+            border: 2px solid #444;
+            background: #fff;
+            font-size: 17px;
+            color: #444;
+            padding: 16px;
+            border-radius: 999px;
+            width: 280px;
+            font-family: 'Arimo', sans-serif;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+        button {
+            color: #fff;
+            background: #1c3b2b;
+            border: 2px solid #1c3b2b;
+            border-radius: 999px;
+            margin-top: -2px;
+            margin-left: 10px;
+            font-family: 'Arimo', sans-serif;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-size: 18px;
+            letter-spacing: 0.03em;
+            display: inline-block;
+            width: 220px;
+            margin: 10px;
+            text-align: center;
+            padding: 18px 0;
+        }
 
-
+    </style>
 </head>
 <body>
 
@@ -22,12 +81,12 @@
 
 <header>
 
-    <h1>GIYA</h1>
+    <img src="assets/icon/Untitled-1-Recovered-Recovered.png" id="nav-logo" alt="">
     <nav>
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Projects</a>
-        <a href="#blog">Blog</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#project">Projects</a>
+        <a href="index.html#blog">Blog</a>
     </nav>
 </header>
 
@@ -35,15 +94,12 @@
 <section id="home" class="home">
     <img src="assets/parallax/sky.png" class="mount2">
     <img src="assets/parallax/back.png" class="mount1">
-    <img src="assets/parallax/bush2.png" class="bush2">
-
-    <h1 class="title">GIYA</h1>
-
+    <button class="title"> <a href="#step1">Register Now</a> </button>
     <img src="assets/parallax/front.png" class="bush1">
-    <img class="leaf2" src="assets/parallax/bush1.png">
-    <img src="assets/parallax/bush.png" class="leaf1">
+
 </section>
 <br><br>
+<section class="student-3">
 <h1 class="s3">Volunteer Registration</h1>
 <br>
 <div class="progress-container">
@@ -53,8 +109,9 @@
 
 <section id="step1" name="Step 1">
     <fieldset>
-        <h4 class="s4">Personal Information</h4>
-        <p>Fill in the form below to register as a volunteer</p><br>
+        <div class="step">
+        <p class="s4">PERSONAL INFORMATION</p>
+        <p>Fill in the form below to register as a volunteer</p>
         <div id="step-info">
             <p>STEP 1 | Personal Details | <span id="current-question">Question 1</span>/6</p>
         </div>
@@ -119,18 +176,21 @@
 
             </div>
         </div>
-
+        </div>
     </fieldset>
+
     <fieldset>
-        <div id="summary">
-            <p> Personal Information Summary</p>
+        <div class="summary">
+            <p class="s4"> PERSONAL INFORMATION SUMMARY</p>
             <div id="answers_1"></div>
         </div>
     </fieldset>
+
 </section>
 <section id="step2" name="Step 2" style="display:none;">
     <fieldset>
-        <p>Contact Information</p><br>
+        <div class="step">
+        <p class="s4">CONTACT INFORMATION</p>
 
         <div id="step-info-2">
             <p>STEP 2 | Contact Information | <span id="current-question-2">Question 1</span>/3</p>
@@ -161,20 +221,19 @@
                 <button onclick="step2.nextstep()" id="next-step-button2">Next Step</button>
             </div>
         </div>
-
+        </div>
     </fieldset>
     <fieldset>
-        <legend>Contact Task Summary</legend>
-        <div id="summary-2">
-            <h2>Summary</h2>
+        <p class="s4">CONTACT TASK SUMMARY</p>
+        <div class="summary">
             <div id="answers_2"></div>
         </div>
     </fieldset>
 </section>
 
 <section id="step3" name="Step 3" style="display:none;">
-    <fieldset>
-        <p>Volunteering Task</p><br>
+    <fieldset><div class="step">
+        <p class="s4">VOLUNTEERING</p>
 
         <div id="step-info-3">
             <p>STEP 3 | Volunteering Task | <span id="current-question-3">Question 1</span>/4</p>
@@ -220,20 +279,19 @@
             </div>
         </div>
 
-
+    </div>
     </fieldset>
     <fieldset>
-        <legend>Volunteering Task Summary</legend>
-        <div id="summary-3">
-            <h2>Summary</h2>
+        <p class="s4">VOLUNTEERING SUMMARY</p>
+        <div class="summary">
             <div id="answers_3"></div>
         </div>
     </fieldset>
 </section>
 
 <section id="step4" name="Step 4" style="display:none;">
-    <fieldset>
-        <p>Volunteering Task</p><br>
+    <fieldset><div class="step">
+        <p class="s4">QUALIFICATION</p>
 
 
         <div id="step-info-4">
@@ -283,12 +341,11 @@
                 <button onclick="step4.nextstep()" id="next-step-button4">Next Step</button>
             </div>
         </div>
-
+    </div>
     </fieldset>
     <fieldset>
-        <p>Volunteering Task Summary</p><br>
-        <div id="summary-4">
-            <h2>Summary</h2>
+        <p  class="s4">QUALIFICATION SUMMARY</p><br>
+        <div class="summary">
             <div id="answers_4"></div>
         </div>
     </fieldset>
@@ -296,8 +353,8 @@
 
 <section id="main_summary" name="main_summary" style="display:none;">
     <fieldset>
-        <legend>Main Summary</legend>
-        <div>
+        <p class="s4">MAIN SUMMARY</p>
+        <div class="summary">
             <h2 id="mainsummery">Main Summary</h2>
             <div id="answers_all"> </div>
 
@@ -307,15 +364,20 @@
     </fieldset>
 </section>
 
+</section>
 
 <script src="js/student_3.js"></script>
 <script src="js/parallax.js"></script>
 
-<footer>
-    <div class="wrapper">
-        <a class="logo" href="#">Chase</a>
+<footer id="footer">
+    <div class="wrapper_footer">
+
         <div class="footer-left">
-            <p class="copyright">Copyright 2016 &copy; Chase</p>
+            <img src="assets/icon/ftguyfiu.jpg">
+            <img src="assets/icon/projectlogo.jpg">
+
+            <p class="footer-nav"><a href="index.html">HOME </a> | <a href="shop.html">SHOP</a> | <a href="volunteer.html">VOLUNTEER REGISTER</a> | <a href="#">GALLERY</a> | <a href="team.html">OUR TEAM</a></p>
+
             <p class="footer-links"><a href="#">Contact Us</a> I <a href="#">Terms &amp; Conditions</a> I<a href="#">Privacy</a>
             </p>
         </div>
@@ -327,5 +389,6 @@
         <div class="clear"></div>
     </div>
 </footer>
+
 </body>
 </html>
